k8s/apps/grafana-alloy/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-alloy
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
